--- a/index.html
+++ b/index.html
@@ -16,146 +16,168 @@
   </head>
   <body class="page">
     <header class="page-header">
-      <nav>
-        <a href="/" class="logo"><span class="logo-web">Web</span>Studio</a>
-        <ul class="site-nav">
-          <li><a href="./" class="link current">Студия</a></li>
-          <li><a href="./portfolio.html" class="link">Портфолио</a></li>
-          <li><a href="" class="link">Контакты</a></li>
+      <div class="container main-nav">
+        <nav class="main-nav">
+          <a href="/" class="logo"><span class="logo-web">Web</span>Studio</a>
+          <ul class="site-nav">
+            <li class="site-nav-item">
+              <a href="./" class="link current">Студия</a>
+            </li>
+            <li class="site-nav-item">
+              <a href="./portfolio.html" class="link">Портфолио</a>
+            </li>
+            <li class="site-nav-item"><a href="" class="link">Контакты</a></li>
+          </ul>
+        </nav>
+        <ul class="header-contacts">
+          <li class="header-contacts-item">
+            <a href="mailto:info@devstudio.com" class="header-contacts-link"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="header-contacts-item">
+            <a href="tel:+380961111111" class="header-contacts-link"
+              >+38 096 111 11 11</a
+            >
+          </li>
         </ul>
-      </nav>
-      <ul class="header-contacts">
-        <li>
-          <a href="mailto:info@devstudio.com" class="header-contacts-link"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li>
-          <a href="tel:+380961111111" class="header-contacts-link"
-            >+38 096 111 11 11</a
-          >
-        </li>
-      </ul>
+      </div>
     </header>
     <main class="hero">
       <section class="hero-page">
-        <h1 class="hero-title">Эффективные решения <br />для вашего бизнеса</h1>
-        <button type="button" class="hero-button">Заказать услугу</button>
+        <div class="container">
+          <h1 class="hero-title">
+            Эффективные решения <br />для вашего бизнеса
+          </h1>
+          <button type="button" class="hero-button">Заказать услугу</button>
+        </div>
       </section>
 
       <section class="prefences">
-        <h2 hidden>Ключевые компетенции</h2>
-        <ul>
-          <li>
-            <h3 class="prefences-title">Внимание к деталям</h3>
-            <p>
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
-            </p>
-          </li>
-          <li>
-            <h3 class="prefences-title">Пунктуальность</h3>
-            <p>
-              Задача организации, в особенности же рамки и место обучения кадров
-              влечет за собой.
-            </p>
-          </li>
-          <li>
-            <h3 class="prefences-title">Планирование</h3>
-            <p>
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
-            </p>
-          </li>
-          <li>
-            <h3 class="prefences-title">Современные технологии</h3>
-            <p>
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 hidden>Ключевые компетенции</h2>
+          <ul class="prefences-list">
+            <li class="prefences-item">
+              <h3 class="prefences-title">Внимание к деталям</h3>
+              <p>
+                Идейные соображения, а также начало повседневной работы по
+                формированию позиции.
+              </p>
+            </li>
+            <li class="prefences-item">
+              <h3 class="prefences-title">Пунктуальность</h3>
+              <p>
+                Задача организации, в особенности же рамки и место обучения
+                кадров влечет за собой.
+              </p>
+            </li>
+            <li class="prefences-item">
+              <h3 class="prefences-title">Планирование</h3>
+              <p>
+                Равным образом консультация с широким активом в значительной
+                степени обуславливает.
+              </p>
+            </li>
+            <li class="prefences-item">
+              <h3 class="prefences-title">Современные технологии</h3>
+              <p>
+                Значимость этих проблем настолько очевидна, что реализация
+                плановых заданий.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="about">
-        <h2 class="about-title">Чем мы занимаемся</h2>
-        <ul>
-          <li>
-            <img
-              src="./image/box_1.svg"
-              alt="Человек_программирует_за_столом"
-              width="370"
-            />
-          </li>
-          <li>
-            <img
-              src="./image/box_2.svg"
-              alt="Человек_со_смартфоном_и_ноутбуком"
-              width="370"
-            />
-          </li>
-          <li>
-            <img
-              src="./image/box_3.svg"
-              alt="Человек_с_планшетом_в_руках_выбирает_цвет"
-              width="370"
-            />
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="about-title">Чем мы занимаемся</h2>
+          <ul class="about-list">
+            <li class="about-list-item">
+              <img
+                src="./image/box_1.svg"
+                alt="Человек_программирует_за_столом"
+                width="370"
+              />
+            </li>
+            <li class="about-list-item">
+              <img
+                src="./image/box_2.svg"
+                alt="Человек_со_смартфоном_и_ноутбуком"
+                width="370"
+              />
+            </li>
+            <li class="about-list-item">
+              <img
+                src="./image/box_3.svg"
+                alt="Человек_с_планшетом_в_руках_выбирает_цвет"
+                width="370"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="our-team">
-        <h2 class="our-team-title">Наша команда</h2>
-        <ul class="our-team-list">
-          <li>
-            <img
-              src="./image/Product_Designer.jpg"
-              alt="Product_designer"
-              width="270"
-            />
-            <h3 class="name">Игорь Демьяненко</h3>
-            <p>Product Designer</p>
-          </li>
-          <li>
-            <img
-              src="./image/Frontend_Developer.jpg"
-              alt="Frontend_Developer"
-              width="270"
-            />
-            <h3 class="name">Ольга Репина</h3>
-            <p>Frontend Developer</p>
-          </li>
-          <li>
-            <img src="./image/Marketing.jpg" alt="Marketing" width="270" />
-            <h3 class="name">Николай Тарасов</h3>
-            <p>Marketing</p>
-          </li>
-          <li>
-            <img src="./image/UI_Designer.jpg" alt="UI_Designer" width="270" />
-            <h3 class="name">Михаил Ермаков</h3>
-            <p>UI Designer</p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="our-team-title">Наша команда</h2>
+          <ul class="our-team-list">
+            <li class="our-team-item">
+              <img
+                src="./image/Product_Designer.jpg"
+                alt="Product_designer"
+                width="270"
+              />
+              <h3 class="name">Игорь Демьяненко</h3>
+              <p>Product Designer</p>
+            </li>
+            <li class="our-team-item">
+              <img
+                src="./image/Frontend_Developer.jpg"
+                alt="Frontend_Developer"
+                width="270"
+              />
+              <h3 class="name">Ольга Репина</h3>
+              <p>Frontend Developer</p>
+            </li>
+            <li class="our-team-item">
+              <img src="./image/Marketing.jpg" alt="Marketing" width="270" />
+              <h3 class="name">Николай Тарасов</h3>
+              <p>Marketing</p>
+            </li>
+            <li class="our-team-item">
+              <img
+                src="./image/UI_Designer.jpg"
+                alt="UI_Designer"
+                width="270"
+              />
+              <h3 class="name">Михаил Ермаков</h3>
+              <p>UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <footer class="futer">
-      <a href="/" class="logo-1"> <span class="logo-web">Web</span>Studio </a>
-      <address>
-        <ul>
-          <li class="futer-adress">
-            <a class="link" href="https://goo.gl/maps/yd3jDt4MuSyeWMqWA"
-              >г. Киев, пр-т Леси Украинки, 26</a
-            >
-          </li>
-          <li class="futer-mail">
-            <a class="futer-link" href="mailto:info@example.com"
-              >info@example.com</a
-            >
-          </li>
-          <li class="futer-tel">
-            <a class="link" href="tel:+380991111111">+38 099 111 11 11</a>
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <a href="/" class="logo-1"> <span class="logo-web">Web</span>Studio </a>
+        <address>
+          <ul>
+            <li class="futer-adress">
+              <a class="link" href="https://goo.gl/maps/yd3jDt4MuSyeWMqWA"
+                >г. Киев, пр-т Леси Украинки, 26</a
+              >
+            </li>
+            <li class="futer-mail">
+              <a class="link" href="mailto:info@example.com"
+                >info@example.com</a
+              >
+            </li>
+            <li class="futer-tel">
+              <a class="link" href="tel:+380991111111">+38 099 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
