--- a/portfolio.html
+++ b/portfolio.html
@@ -15,29 +15,36 @@
     />
   <body class="page-portfolio">
     <header class="page-header">
-      <nav>
-        <a href="/" class="logo"><span class="logo-web">Web</span>Studio</a>
-        <ul class="site-nav">
-          <li><a href="./index.html" class="link">Студия</a></li>
-          <li><a href="./portfolio.html" class="link current">Портфолио</a></li>
-          <li><a href="" class="link">Контакты</a></li>
+      <div class="container main-nav">
+        <nav class="main-nav">
+          <a href="/" class="logo"><span class="logo-web">Web</span>Studio</a>
+          <ul class="site-nav">
+            <li class="site-nav-item">
+              <a href="./" class="link">Студия</a>
+            </li>
+            <li class="site-nav-item">
+              <a href="./portfolio.html" class="link current">Портфолио</a>
+            </li>
+            <li class="site-nav-item"><a href="" class="link">Контакты</a></li>
+          </ul>
+        </nav>
+        <ul class="header-contacts">
+          <li class="header-contacts-item">
+            <a href="mailto:info@devstudio.com" class="header-contacts-link"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="header-contacts-item">
+            <a href="tel:+380961111111" class="header-contacts-link"
+              >+38 096 111 11 11</a
+            >
+          </li>
         </ul>
-      </nav>
-      <ul class="header-contacts">
-        <li>
-          <a href="mailto:info@devstudio.com" class="header-contacts-link"
-            >info@devstudio.com</a
-          >
-        </li>
-        <li>
-          <a href="tel:+380961111111" class="header-contacts-link"
-            >+38 096 111 11 11</a
-          >
-        </li>
-      </ul>
+      </div>
     </header>
     <main>
       <section class="portfolio-main">
+      <div class="container">
       <h1 hidden class="main-page-name">Портфолио</h1>
       <ul class="main-list">
         <li class="main-list-item"><button type="button">Все</button></li>
@@ -46,6 +53,9 @@
         <li class="main-list-item"><button type="button">Дизайн</button></li>
         <li class="main-list-item"><button type="button">Маркетинг</button></li>
       </ul>
+      </div>
+      
+      <div class="container portfolio">
       <ul class="main-list-projects">
         <li class="main-list-projects-items">
           <a href="">
@@ -147,26 +157,31 @@
           </a>
         </li>
       </ul>
+      </div>
       </section>
     </main>
 
      <footer class="futer">
-      <a href="/" class="logo-1"> <span class="logo-web">Web</span>Studio </a>
-      <address>
-        <ul>
-          <li class="futer-adress">
-            <a class="link" href="https://goo.gl/maps/yd3jDt4MuSyeWMqWA"
-              >г. Киев, пр-т Леси Украинки, 26</a
-            >
-          </li>
-          <li class="futer-mail">
-            <a class="link" href="mailto:info@example.com">info@example.com</a>
-          </li>
-          <li class="futer-tel">
-            <a class="link" href="tel:+380991111111">+38 099 111 11 11</a>
-          </li>
-        </ul>
-      </address>
+      <div class="container">
+        <a href="/" class="logo-1"> <span class="logo-web">Web</span>Studio </a>
+        <address>
+          <ul>
+            <li class="futer-adress">
+              <a class="link" href="https://goo.gl/maps/yd3jDt4MuSyeWMqWA"
+                >г. Киев, пр-т Леси Украинки, 26</a
+              >
+            </li>
+            <li class="futer-mail">
+              <a class="link" href="mailto:info@example.com"
+                >info@example.com</a
+              >
+            </li>
+            <li class="futer-tel">
+              <a class="link" href="tel:+380991111111">+38 099 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
