--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </div>
       </section>
 
-      <section class="prefences">
+      <section class="prefences section">
         <div class="container">
           <h2 hidden>Ключевые компетенции</h2>
           <ul class="prefences-list">
@@ -92,7 +92,7 @@
           </ul>
         </div>
       </section>
-      <section class="about">
+      <section class="about section">
         <div class="container">
           <h2 class="about-title">Чем мы занимаемся</h2>
           <ul class="about-list">
@@ -120,7 +120,7 @@
           </ul>
         </div>
       </section>
-      <section class="our-team">
+      <section class="our-team section">
         <div class="container">
           <h2 class="our-team-title">Наша команда</h2>
           <ul class="our-team-list">
